# icore-image

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .nvimrc.example  CHANGELOG.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  aiminer.py  audit_extraction.py  base_config.xml  build.sh  build_processor.sh  cli.py  config.py  config.yml  conftest.py  convert_to_icns.py  ctp.py  dcmtk.py  deid_rs.py  entitlements-icore-processor.plist  icore_cli.spec  icore_processor.py  icore_processor.spec  icorecli.spec  module_headerextract_local.py  module_headerextraction.py  module_headerextraction_local.py  module_image_export.py  module_imagedeid_local.py  module_imagedeid_pacs.py  module_imagedeidexport.py  module_imageqr.py  module_singleclickicore.py  module_textdeid.py  orthanc-config.json  package-lock.json  progress_tracker.py  (+40 more)
CTP/: log4j.properties
ctp/: config.xml  integers.lg  launcher.properties  log4j.properties
deid/: dictionary.xml  grammar.py  initialize_admin_password.py  initialize_admin_password.spec  manage.spec  package-lock.json  package.json  pathutils.py  postcss.config.js  processor.py  processor.spec  requirements.txt  styles.css  tailwind.config.js  tasks.py  test_delete_task.py  worker.py
docs/: ctp-script-format.md  folder-structure.md
electron/: afterSign.js  create-dmg.sh  jest.config.js  loading.html  main.js  main.test.js  package-lock.json  package.json  preload.js
frontend/: eslint.config.js  openapi.json  package-lock.json  package.json  rsbuild.config.ts  tailwind.config.cjs  tsconfig.json
pipeline/: __init__.py  (+6 more)
(+209 files in other folders)
