[project]
name = "icore-image"
version = "0.1.0"
description = "iCore de-identification software"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "azure-storage-blob>=12.28.0",
    "bcrypt>=5.0.0",
    "cryptography>=46.0.5",
    "django>=6.0.2",
    "django-tailwind>=4.4.2",
    "dotenv>=0.9.9",
    "importlib-metadata>=8.7.1",
    "lark>=1.3.1",
    "numpy<2.0.0",
    "openpyxl>=3.1.5",
    "packaging>=26.0",
    "pandas<3",
    "pip>=26.0.1",
    "presidio-analyzer>=2.2.361",
    "presidio-anonymizer>=2.2.361",
    "psutil>=7.2.2",
    "pycparser>=3.0",
    "pydicom>=3.0.1",
    "pyinstaller==6.11.1",
    "pynetdicom>=3.0.4",
    "pytest>=9.0.2",
    "pytest-rerunfailures>=16.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "ruamel-yaml>=0.19.1",
    "ruamel-yaml-clib>=0.2.15",
    "six>=1.17.0",
    "spacy>=3.8.11",
    "en-core-web-sm>=3.8.0",
    "tenacity>=9.1.4",
    "typing-extensions>=4.15.0",
    "tzdata>=2025.3",
    "tzlocal>=5.3.1",
    "zipp>=3.23.0",
]

